interval between events

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,13 +513,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>date</th>\n",
+       "      <th>event</th>\n",
+       "      <th>day</th>\n",
+       "      <th>dayW</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>monthYear</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-02-07</td>\n",
+       "      <td>small_purchase</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-02-20</td>\n",
+       "      <td>small_purchase</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-04-12</td>\n",
+       "      <td>contact</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-04-19</td>\n",
+       "      <td>contact</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-04-30</td>\n",
+       "      <td>contact</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   uuid       date           event  day  \\\n",
+       "0  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-02-07  small_purchase    7   \n",
+       "1  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-02-20  small_purchase   20   \n",
+       "2  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-12         contact   12   \n",
+       "3  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-19         contact   19   \n",
+       "4  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-30         contact   30   \n",
+       "\n",
+       "        dayW  month  year monthYear  \n",
+       "0   Thursday      2  2019   2019-02  \n",
+       "1  Wednesday      2  2019   2019-02  \n",
+       "2     Friday      4  2019   2019-04  \n",
+       "3     Friday      4  2019   2019-04  \n",
+       "4    Tuesday      4  2019   2019-04  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(df.date[1] - df.date[0]).days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for user in usersID:\n",
-    "    "
+    "intervalBetweenEvents = []\n",
+    "intervalBetweenEvents.append(0)\n",
+    "\n",
+    "for row in range(1,len(df)):\n",
+    "    if df.uuid[row] == df.uuid[row-1]:\n",
+    "        diffDates = abs(df.date[row] - df.date[(row-1)]).days\n",
+    "        intervalBetweenEvents.append(diffDates)\n",
+    "    else: intervalBetweenEvents.append(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['interval'] = intervalBetweenEvents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
