--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -305,15 +305,8 @@
     "    if df.uuid[row] == df.uuid[row-1]:\n",
     "        diffDates = abs(df.date[row] - df.date[(row-1)]).days\n",
     "        intervalBetweenEvents.append(diffDates)\n",
-    "    else: intervalBetweenEvents.append(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    else: intervalBetweenEvents.append(0)\n",
+    "\n",
     "df['interval'] = intervalBetweenEvents"
    ]
   },
@@ -539,6 +532,459 @@
    "source": [
     "df['churn'] = [1 if x > 55 else 0 for x in df.interval]\n",
     "df.churn.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of Customers that Churn:  5.42 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Percentage of Customers that Churn: \", round((len(df[df.churn == 1])/df.uuid.nunique())*100,2), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contact           58406\n",
+       "small_purchase    30741\n",
+       "big_purchase      14956\n",
+       "Name: event, dtype: int64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.event.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['contact'] = [1 if x == 'contact' else 0 for x in df.event]\n",
+    "df['small_purchase'] = [1 if x == 'small_purchase' else 0 for x in df.event]\n",
+    "df['big_purchase'] = [1 if x == 'big_purchase' else 0 for x in df.event]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>date</th>\n",
+       "      <th>event</th>\n",
+       "      <th>day</th>\n",
+       "      <th>dayW</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>monthYear</th>\n",
+       "      <th>interval</th>\n",
+       "      <th>churn</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>small_purchase</th>\n",
+       "      <th>big_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-02-07</td>\n",
+       "      <td>small_purchase</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-02-20</td>\n",
+       "      <td>small_purchase</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-02</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-04-12</td>\n",
+       "      <td>contact</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-04-19</td>\n",
+       "      <td>contact</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>2019-04-30</td>\n",
+       "      <td>contact</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   uuid       date           event  day  \\\n",
+       "0  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-02-07  small_purchase    7   \n",
+       "1  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-02-20  small_purchase   20   \n",
+       "2  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-12         contact   12   \n",
+       "3  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-19         contact   19   \n",
+       "4  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-30         contact   30   \n",
+       "\n",
+       "        dayW  month  year monthYear  interval  churn  contact  small_purchase  \\\n",
+       "0   Thursday      2  2019   2019-02         0      0        0               1   \n",
+       "1  Wednesday      2  2019   2019-02        13      0        0               1   \n",
+       "2     Friday      4  2019   2019-04        51      0        1               0   \n",
+       "3     Friday      4  2019   2019-04         7      0        1               0   \n",
+       "4    Tuesday      4  2019   2019-04        11      0        1               0   \n",
+       "\n",
+       "   big_purchase  \n",
+       "0             0  \n",
+       "1             0  \n",
+       "2             0  \n",
+       "3             0  \n",
+       "4             0  "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sumTypeEvents = df.groupby(['uuid'])[['contact','small_purchase','big_purchase']].agg('sum').reset_index()\n",
+    "meanInterval = df.groupby(['uuid'])['interval'].agg('mean').reset_index()\n",
+    "lastInterval = df.groupby(['uuid'])[['interval','churn']].last().reset_index()\n",
+    "\n",
+    "dfUsers = pd.merge(pd.merge(sumTypeEvents,meanInterval,on='uuid'),lastInterval,on='uuid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>small_purchase</th>\n",
+       "      <th>big_purchase</th>\n",
+       "      <th>interval_x</th>\n",
+       "      <th>interval_y</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.090909</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0012c23d-379a-43fb-a91b-6f95c5358f52</td>\n",
+       "      <td>40</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.948276</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0076823a-041d-4fa0-a19c-0e6e63bcef76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.333333</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>017c823f-e985-40b9-8e61-81eed835e3e2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>41</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.637037</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0183fced-42c4-4379-894a-d8ec09c184e4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.653846</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   uuid  contact  small_purchase  \\\n",
+       "0  00038504-c286-4c49-a6ed-d7853f65f7d6        7               3   \n",
+       "1  0012c23d-379a-43fb-a91b-6f95c5358f52       40              11   \n",
+       "2  0076823a-041d-4fa0-a19c-0e6e63bcef76        3               2   \n",
+       "3  017c823f-e985-40b9-8e61-81eed835e3e2       82              41   \n",
+       "4  0183fced-42c4-4379-894a-d8ec09c184e4       15               8   \n",
+       "\n",
+       "   big_purchase  interval_x  interval_y  churn  \n",
+       "0             1   14.090909           1      0  \n",
+       "1             7    7.948276           4      0  \n",
+       "2             1    7.333333           9      0  \n",
+       "3            12    1.637037           0      0  \n",
+       "4             3    6.653846           4      0  "
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfUsers.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>small_purchase</th>\n",
+       "      <th>big_purchase</th>\n",
+       "      <th>mean_interval</th>\n",
+       "      <th>last_interval</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.090909</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0012c23d-379a-43fb-a91b-6f95c5358f52</td>\n",
+       "      <td>40</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.948276</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0076823a-041d-4fa0-a19c-0e6e63bcef76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.333333</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>017c823f-e985-40b9-8e61-81eed835e3e2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>41</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.637037</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0183fced-42c4-4379-894a-d8ec09c184e4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.653846</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   uuid  contact  small_purchase  \\\n",
+       "0  00038504-c286-4c49-a6ed-d7853f65f7d6        7               3   \n",
+       "1  0012c23d-379a-43fb-a91b-6f95c5358f52       40              11   \n",
+       "2  0076823a-041d-4fa0-a19c-0e6e63bcef76        3               2   \n",
+       "3  017c823f-e985-40b9-8e61-81eed835e3e2       82              41   \n",
+       "4  0183fced-42c4-4379-894a-d8ec09c184e4       15               8   \n",
+       "\n",
+       "   big_purchase  mean_interval  last_interval  churn  \n",
+       "0             1      14.090909              1      0  \n",
+       "1             7       7.948276              4      0  \n",
+       "2             1       7.333333              9      0  \n",
+       "3            12       1.637037              0      0  \n",
+       "4             3       6.653846              4      0  "
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfUsers.rename(columns={'interval_x':'mean_interval','interval_y':'last_interval'},inplace=True)\n",
+    "dfUsers.head()\n"
    ]
   }
  ],
