--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -419,27 +419,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.999462\n",
+       "1    0.000538\n",
+       "Name: churn, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#creating churn feature in the dataset\n",
-    "df['churn'] = [1 if x > 55 else 0 for x in df.interval]\n",
+    "cutOffDate = 55\n",
+    "df['churn'] = [1 if x > cutOffDate else 0 for x in df.interval]\n",
     "df.churn.value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of Customers that Churn:  5.42 %\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Percentage of Customers that Churn: \", round((len(df[df.churn == 1])/df.uuid.nunique())*100,2), \"%\")"
    ]
@@ -453,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +480,7 @@
        "Name: event, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -518,6 +533,7 @@
        "      <th>event</th>\n",
        "      <th>monthYear</th>\n",
        "      <th>interval</th>\n",
+       "      <th>churn</th>\n",
        "      <th>contact</th>\n",
        "      <th>small_purchase</th>\n",
        "      <th>big_purchase</th>\n",
@@ -532,6 +548,7 @@
        "      <td>2019-02</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -543,6 +560,7 @@
        "      <td>2019-02</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -553,6 +571,7 @@
        "      <td>contact</td>\n",
        "      <td>2019-04</td>\n",
        "      <td>51</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -564,6 +583,7 @@
        "      <td>contact</td>\n",
        "      <td>2019-04</td>\n",
        "      <td>7</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -575,6 +595,7 @@
        "      <td>contact</td>\n",
        "      <td>2019-04</td>\n",
        "      <td>11</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -591,15 +612,15 @@
        "3  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-19         contact   2019-04   \n",
        "4  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-30         contact   2019-04   \n",
        "\n",
-       "   interval  contact  small_purchase  big_purchase  \n",
-       "0         0        0               1             0  \n",
-       "1        13        0               1             0  \n",
-       "2        51        1               0             0  \n",
-       "3         7        1               0             0  \n",
-       "4        11        1               0             0  "
+       "   interval  churn  contact  small_purchase  big_purchase  \n",
+       "0         0      0        0               1             0  \n",
+       "1        13      0        0               1             0  \n",
+       "2        51      0        1               0             0  \n",
+       "3         7      0        1               0             0  \n",
+       "4        11      0        1               0             0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +743,7 @@
        "4             3   6.653846 2020-12-31  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,14 +754,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
+    "from datetime import date\n",
     "\n",
     "dayCalcChurn = pd.to_datetime(date(2021,1,1)) #first day of 2021 - to calculate probability of churn\n",
-    "#abs(dayCalcChurn - dfUsers.date[0]).days\n",
+    "\n",
     "daysLastEvent = []\n",
     "for i in range(0,len(dfUsers)):\n",
     "    diffDaysLast = abs(dayCalcChurn - dfUsers.date[i]).days\n",
@@ -751,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +876,7 @@
        "4             3   6.653846 2020-12-31                1  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,192 +887,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>uuid</th>\n",
-       "      <th>contact</th>\n",
-       "      <th>small_purchase</th>\n",
-       "      <th>big_purchase</th>\n",
-       "      <th>interval</th>\n",
-       "      <th>date</th>\n",
-       "      <th>days_last_event</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.090909</td>\n",
-       "      <td>2019-07-12</td>\n",
-       "      <td>539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0076823a-041d-4fa0-a19c-0e6e63bcef76</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.333333</td>\n",
-       "      <td>2019-12-16</td>\n",
-       "      <td>382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>01b82507-ec72-4826-b825-64c7f20e4088</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.250000</td>\n",
-       "      <td>2019-05-12</td>\n",
-       "      <td>600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>01d22216-c360-4587-b0eb-e5c1c520e281</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>2020-02-23</td>\n",
-       "      <td>313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>03897694-4a38-47c6-820e-118d0c055cf4</td>\n",
-       "      <td>27</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8.214286</td>\n",
-       "      <td>2020-01-28</td>\n",
-       "      <td>339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1024</th>\n",
-       "      <td>fc9975ab-5ff9-49ba-b318-b358cf4dc61a</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7.375000</td>\n",
-       "      <td>2020-05-22</td>\n",
-       "      <td>224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1025</th>\n",
-       "      <td>fd1ddefe-599d-4963-85cb-04f86d97cba2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.333333</td>\n",
-       "      <td>2019-06-09</td>\n",
-       "      <td>572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1026</th>\n",
-       "      <td>fd3269e7-4407-48da-9f3f-461c1685df98</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8.857143</td>\n",
-       "      <td>2020-04-07</td>\n",
-       "      <td>269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027</th>\n",
-       "      <td>fd5f00c6-8939-476c-800f-886bf56d232d</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2019-08-11</td>\n",
-       "      <td>509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1030</th>\n",
-       "      <td>fdca8f30-d8c8-4bf7-98eb-5e778ed3f0a2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.500000</td>\n",
-       "      <td>2020-08-29</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>315 rows × 7 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                      uuid  contact  small_purchase  \\\n",
-       "0     00038504-c286-4c49-a6ed-d7853f65f7d6        7               3   \n",
-       "2     0076823a-041d-4fa0-a19c-0e6e63bcef76        3               2   \n",
-       "6     01b82507-ec72-4826-b825-64c7f20e4088        4               0   \n",
-       "7     01d22216-c360-4587-b0eb-e5c1c520e281        1               1   \n",
-       "12    03897694-4a38-47c6-820e-118d0c055cf4       27              13   \n",
-       "...                                    ...      ...             ...   \n",
-       "1024  fc9975ab-5ff9-49ba-b318-b358cf4dc61a        8               6   \n",
-       "1025  fd1ddefe-599d-4963-85cb-04f86d97cba2       10               2   \n",
-       "1026  fd3269e7-4407-48da-9f3f-461c1685df98       11               5   \n",
-       "1027  fd5f00c6-8939-476c-800f-886bf56d232d        1               0   \n",
-       "1030  fdca8f30-d8c8-4bf7-98eb-5e778ed3f0a2        3               1   \n",
-       "\n",
-       "      big_purchase   interval       date  days_last_event  \n",
-       "0                1  14.090909 2019-07-12              539  \n",
-       "2                1   7.333333 2019-12-16              382  \n",
-       "6                0   5.250000 2019-05-12              600  \n",
-       "7                0   4.000000 2020-02-23              313  \n",
-       "12               2   8.214286 2020-01-28              339  \n",
-       "...            ...        ...        ...              ...  \n",
-       "1024             2   7.375000 2020-05-22              224  \n",
-       "1025             0  10.333333 2019-06-09              572  \n",
-       "1026             5   8.857143 2020-04-07              269  \n",
-       "1027             0   0.000000 2019-08-11              509  \n",
-       "1030             0   4.500000 2020-08-29              125  \n",
-       "\n",
-       "[315 rows x 7 columns]"
+       "0.3239845261121857"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfUsers[dfUsers.days_last_event > 90]"
+    "len(dfUsers[dfUsers.days_last_event > cutOffDate])/len(dfUsers)"
    ]
   }
  ],
